Increase minimal numpy version on Windows

--- a/recipes/lightfm/meta.yaml
+++ b/recipes/lightfm/meta.yaml
@@ -23,16 +23,15 @@ requirements:
     - cython
     - openmp  # [linux]
     # Pin numpy at build time with the minimum version available.
-    - numpy 1.10.*  # [not win or py3k]
-    # required by scipy >=0.17 on windows
-    - numpy 1.11.*  # [win and py2k]
+    - numpy 1.10.*  # [not win]
+    - numpy 1.11.*  # [win]
     - scipy >=0.17
     - requests
   run:
     - python
     - openmp  # [linux]
-    - numpy >=1.10  # [not win or py3k]
-    - numpy >=1.11  # [win and py2k]
+    - numpy >=1.10  # [not win]
+    - numpy >=1.11  # [win]
     - scipy >=0.17
     - requests
 
