needed to find out what libraries to test for on travisci

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -27,6 +27,8 @@ requirements:
 
 test:
   commands:
+    - ls -la $PREFIX/lib
+    - ls -la $PREFIX/include
     - test -L $PREFIX/lib/libadept.so  # [unix]
     - test -L $PREFIX/lib/libadept.dylib  # [osx]
     - test -f $PREFIX/lib/libadept.so.0.0.0  # [unix]
