--- a/recipes/pidly/meta.yaml
+++ b/recipes/pidly/meta.yaml
@@ -16,7 +16,7 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record=record.txt
-  noarch: python
+  skip: True  # [win]
 
 requirements:
   build:
