Revert "Removing redudant license file."
This reverts commit 3a160d3b7a296b9a5f4c22dabfdaf1ba9c33de86.

--- a/recipes/pyemojify/meta.yaml
+++ b/recipes/pyemojify/meta.yaml
@@ -31,6 +31,7 @@ about:
   home: https://github.com/lord63/pyemojify
   license: MIT
   license_family: MIT
+  license_file: LICENSE
   summary: 'Substitutes emoji aliases to emoji raw characters. Simple but sweet :smile:'
 
 extra:
