fixing sha, osx selector

--- a/recipes/rdkit/meta.yaml
+++ b/recipes/rdkit/meta.yaml
@@ -8,7 +8,7 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://github.com/rdkit/rdkit/archive/{{ version }}.tar.gz
-  sha256: f2a360f515968e79845e6257be9fee85809ce40705d5b383598de3747dbfbe6f
+  sha256: ab83bb4d3c5986d22da0ce28d352e5f911830b63f18fee85537cebfa3df28e82
   patches:
     - rdpaths.patch
     - rdconfig.patch  # [win]
@@ -24,7 +24,7 @@ requirements:
     - boost <=1.64
     - python <=3.5  # [win]
     - python  # [unix]
-    - python >=3  # [mac]
+    - python >=3  # [osx]
     - numpy 1.11.*
     - pillow
     - freetype
