pyttk: Revised meta.yaml to delete quotes and remove version of tk

--- a/recipes/pyttk/meta.yaml
+++ b/recipes/pyttk/meta.yaml
@@ -15,16 +15,15 @@ source:
 
 build:
   number: 0
-  script: 'python setup.py install '
+  script: python setup.py install
   noarch: python
 
 requirements:
   build:
     - python
-    - tk 8.5.*
   run:
     - python
-    - tk 8.5.*
+    - tk
 
 test:
   imports:
