add license file manually and min dep versions

--- a/recipes/pylogit/meta.yaml
+++ b/recipes/pylogit/meta.yaml
@@ -21,12 +21,12 @@ requirements:
     - setuptools
   run:
     - python
-    - future
-    - numpy
-    - pandas
-    - scipy
-    - statsmodels
-    - tqdm
+    - future >= 0.16
+    - numpy >= 1.10.2
+    - pandas >= 0.16.2
+    - scipy >= 0.16.1
+    - statsmodels >= 0.6.1
+    - tqdm >= 4.15.0
 
 test:
   imports:
@@ -36,6 +36,7 @@ about:
   home: https://github.com/timothyb0912/pylogit
   license: BSD-3-Clause
   license_family: BSD
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
   summary: 'A Python package for estimating conditional logit models'
 
 extra:
