updating skip selectors

--- a/recipes/rdkit/meta.yaml
+++ b/recipes/rdkit/meta.yaml
@@ -14,6 +14,8 @@ source:
     - rdconfig.patch  # [win]
 
 build:
+  skip: true  # [win and py36]
+  skip: true  # [osx and py27]
   number: 0
 
 requirements:
@@ -22,9 +24,7 @@ requirements:
     - cmake
     - requests
     - boost <=1.64
-    - python <=3.5  # [win]
-    - python  # [unix]
-    - python >=3  # [osx]
+    - python
     - numpy 1.11.*
     - pillow
     - freetype
