--- a/recipes/pylogit/meta.yaml
+++ b/recipes/pylogit/meta.yaml
@@ -37,6 +37,7 @@ about:
   home: https://github.com/timothyb0912/pylogit
   license: BSD-3-Clause
   license_family: BSD
+  # license file to be added to distribution in https://github.com/timothyb0912/pylogit/pull/18
   license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
   summary: 'A Python package for estimating conditional logit models'
 
