omas: Cleaned up recipe to remove unnecessary patch and quotes

--- a/recipes/omas/meta.yaml
+++ b/recipes/omas/meta.yaml
@@ -12,12 +12,10 @@ source:
   fn: '{{ name }}-{{ version }}.{{ file_ext }}'
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ file_ext }}
   '{{ hash_type }}': '{{ hash_value }}'
-  patches:
-    - setup.py.patch
 
 build:
   number: 0
-  script: "python setup.py install --single-version-externally-managed --record record.txt"
+  script: python setup.py install --single-version-externally-managed --record record.txt
   noarch: python
 
 requirements:
@@ -29,7 +27,7 @@ requirements:
     - numpy
     - netcdf4
     - boto3
-    - botocore 1.7.*
+    - botocore
 
 about:
   home: https://gafusion.github.io/omas
