Fix lint issues

--- a/recipes/numba/meta.yaml
+++ b/recipes/numba/meta.yaml
@@ -73,9 +73,9 @@ test:
 
 about:
   home: http://numba.github.com
-  license: BSD License
+  license: BSD 2-clause
   license_family: BSD
-  license_file: BSD 2-clause
+  license_file: LICENSE
   summary: NumPy aware dynamic Python compiler using LLVM
   description: | 
     Numba is an Open Source NumPy-aware optimizing compiler for Python 
