omas: Include comment about upstream pull request to include license file in distribution

--- a/recipes/omas/meta.yaml
+++ b/recipes/omas/meta.yaml
@@ -33,6 +33,7 @@ about:
   home: https://gafusion.github.io/omas
   license: MIT
   license_family: MIT
+  # Inclusion of file in distribution should be provided by adoption of https://github.com/gafusion/omas/pull/4
   license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
   summary: Ordered Multidimensional Array Structure
   description: |
