--- a/recipes/numba/meta.yaml
+++ b/recipes/numba/meta.yaml
@@ -20,14 +20,14 @@ requirements:
   build:
     - python
     - setuptools
-    - llvmlite
+    - llvmlite ==0.21.0
     - numpy
     - enum34
     - singledispatch
     - funcsigs
   run:
     - python
-    - llvmlite
+    - llvmlite ==0.21.0
     - numpy
     - enum34
     - singledispatch
