Implementing @mwcraig comments

--- a/recipes/speclite/meta.yaml
+++ b/recipes/speclite/meta.yaml
@@ -13,8 +13,7 @@ source:
   
 build:
   number: 0
-  skip: true  # [win]
-  script: python setup.py install --offline --no-git --single-version-externally-managed --record record.txt
+  script: python setup.py install --offline --single-version-externally-managed --record record.txt
 
 requirements:
 
@@ -50,8 +49,10 @@ about:
   license: BSD-3-Clause
   license_family: BSD
   summary: 'This package provides a set of lightweight utilities for working with spectroscopic data in astronomy. Based on the astropy affiliated package template.'
-  license_file: '{{ environ["SRC_DIR"] }}/licenses/LICENSE.rst'
+  license_file: licenses/LICENSE.rst
+  dev_url: https://github.com/dkirkby/speclite
   
 extra:
   recipe-maintainers:
     - giacomov
+    - dkirkby
