restrict to python 2

--- a/recipes/mdbenchmark/meta.yaml
+++ b/recipes/mdbenchmark/meta.yaml
@@ -14,7 +14,7 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
-  skip: true  # [win and osx]
+  skip: true  # [win and osx and (py36 or py35)]
   entry_points:
     - mdbenchmark = mdbenchmark.cli:cli
 
