Adding @pbrod as maintainer, and corrected the license

--- a/recipes/numdifftools/meta.yaml
+++ b/recipes/numdifftools/meta.yaml
@@ -45,13 +45,14 @@ test:
 
 about:
   home: "https://github.com/pbrod/numdifftools/"
-  license: new BSD
+  license: BSD-3-Clause
   summary: Solves automatic numerical differentiation problems in one or more variables.
   license_family: BSD
   license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
   doc_url: http://numdifftools.readthedocs.io/en/latest/
-  dev_url: "https://github.com/pbrod/numdifftools/"
+  dev_url: https://github.com/pbrod/numdifftools/
 
 extra:
   recipe-maintainers:
     - giacomov
+    - pbrod
