skipping py3k on windows

--- a/recipes/rdkit/meta.yaml
+++ b/recipes/rdkit/meta.yaml
@@ -14,7 +14,7 @@ source:
     - rdconfig.patch  # [win]
 
 build:
-  skip: true  # [win and py36]
+  skip: true  # [win and py3k]
   skip: true  # [osx and py27]
   number: 0
 
