--- a/recipes/speclite/meta.yaml
+++ b/recipes/speclite/meta.yaml
@@ -37,7 +37,7 @@ test:
   commands:
     # Execute the full test suite
     
-    - cd ${PREFIX}/lib/python*/site-packages/speclite/tests ; py.test -vv
+    - cd ${PREFIX}/lib/python*/site-packages/speclite/tests ; py.test -vv  # [not win]
   
   requires:
     - pytest
