torchvision: switch to tarball

--- a/recipes/torchvision/meta.yaml
+++ b/recipes/torchvision/meta.yaml
@@ -5,8 +5,9 @@ package:
   version: {{ version }}
 
 source:
-  git_url: https://github.com/pytorch/vision.git
-  git_tag: v{{ version }}
+  fn: torchvision-{{ version }}.tar.gz
+  url: https://github.com/pytorch/vision/archive/v{{ version }}.tar.gz
+  sha256: a0206e2542120d10fb0077ee8da710038641add6f17e9ad64285b64c3dedd62f
 
 build:
   number: 0
