BSD-style license

--- a/recipes/fonttools/meta.yaml
+++ b/recipes/fonttools/meta.yaml
@@ -32,8 +32,8 @@ test:
 
 about:
   home: https://github.com/fonttools/fonttools
-  license: MIT
-  license_family: MIT
+  license: BSD-style
+  license_family: BSD
   license_file: LICENSE
   summary: 'fontTools is a library for manipulating fonts, written in Python.'
 
