--- a/recipes/fonttools/meta.yaml
+++ b/recipes/fonttools/meta.yaml
@@ -28,12 +28,14 @@ requirements:
 
 test:
   imports:
-    - fonttools
+    - fontTools
+    - fontTools.ttLib
+
 
 about:
   home: https://github.com/fonttools/fonttools
-  license: BSD-style
-  license_family: BSD
+  license: MIT
+  license_family: MIT
   license_file: LICENSE
   summary: 'fontTools is a library for manipulating fonts, written in Python.'
 
