omas: Remove LICENSE.txt.  Update version.  More robust test.

--- a/recipes/omas/meta.yaml
+++ b/recipes/omas/meta.yaml
@@ -1,8 +1,8 @@
 {% set name = "omas" %}
-{% set version = "0.2.6" %}
+{% set version = "0.2.8" %}
 {% set file_ext = "tar.gz" %}
 {% set hash_type = "sha256" %}
-{% set hash_value = "a3f315f4b192d665b96e4f041ce2fc7fd88a43ada9ab183249f5f5d7f54d7f6c" %}
+{% set hash_value = "ccc1d332f557a9a6b586ffa9463b96b5596731b8f1cf265670d8cffd3a1384f5" %}
 
 package:
   name: '{{ name|lower }}'
@@ -33,8 +33,7 @@ about:
   home: https://gafusion.github.io/omas
   license: MIT
   license_family: MIT
-  # Inclusion of file in distribution should be provided by adoption of https://github.com/gafusion/omas/pull/4
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
+  license_file: LICENSE.txt
   summary: Ordered Multidimensional Array Structure
   description: |
     OMAS is a set of Python tools that aim at simplifying the interface
