Add "test" section.

--- a/recipes/sdf/meta.yaml
+++ b/recipes/sdf/meta.yaml
@@ -20,6 +20,12 @@ requirements:
     - numpy
     - scipy
 
+test:
+  imports:
+    - sdf
+    - sdf.examples
+    - sdf.plot
+
 about:
   home: https://github.com/ScientificDataFormat/SDF-Python
   license: BSD-3-Clause
