--- a/recipes/numba/meta.yaml
+++ b/recipes/numba/meta.yaml
@@ -21,17 +21,17 @@ requirements:
     - python
     - setuptools
     - llvmlite ==0.21.0
-    - numpy
-    - enum34
-    - singledispatch
-    - funcsigs
+    - numpy >=1.10
+    - enum34 # [py2k]
+    - singledispatch # [py2k]
+    - funcsigs # [py2k]
   run:
     - python
     - llvmlite ==0.21.0
-    - numpy
-    - enum34
-    - singledispatch
-    - funcsigs
+    - numpy >=1.10
+    - enum34 # [py2k]
+    - singledispatch # [py2k]
+    - funcsigs # [py2k]
 
 test:
   imports:
