Now building from source with the right version of pyscaffold

--- a/recipes/numdifftools/meta.yaml
+++ b/recipes/numdifftools/meta.yaml
@@ -1,21 +1,21 @@
 {% set name = "numdifftools" %}
 {% set version = "0.9.20" %}
-{% set sha256 = "443b43e43c970b4f37cd2a5a57f842192da89daa2d58105ca5f5f894b7d4fcd0" %}
+{% set sha256 = "a6af9a28851cc9a207720d949b34b6ac70f0bccb365d9df3c6ef3ffd91176257" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}-py2.py3-none-any.whl 
-  url: https://files.pythonhosted.org/packages/py2.py3/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}-py2.py3-none-any.whl 
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
   number: 0
   # I build from the wheel so that we don't need pyscaffold. The version
   # needed by the source distribution of numdifftools is not compatible with conda-forge
-  script: pip install {{ name }}-{{ version }}-py2.py3-none-any.whl --no-deps
+  script: python setup.py install --single-version-externally-managed --record record.txt
   noarch: python
   
 requirements:
@@ -24,10 +24,10 @@ requirements:
   
     - python
     - setuptools
-    - pip
     - numpy >=1.9
     - scipy >=0.8
     - algopy >=0.4
+    - pyscaffold <2.5
     
   run:
     - python
