--- a/recipes/numba/meta.yaml
+++ b/recipes/numba/meta.yaml
@@ -21,7 +21,7 @@ requirements:
     - python
     - setuptools
     - llvmlite ==0.21.0
-    - numpy >=1.10
+    - numpy 1.10.*
     - enum34  # [py2k]
     - singledispatch  # [py2k]
     - funcsigs  # [py2k]
