test with ophyd

--- a/recipes/bluesky/meta.yaml
+++ b/recipes/bluesky/meta.yaml
@@ -37,9 +37,12 @@ requirements:
     - pyzmq
 
 test:
+  requires:
+    - ophyd
   imports:
     - bluesky
     - bluesky.examples
+    - bluesky.plans
     - bluesky.callbacks
 
 about:
