--- a/recipes/bluesky/meta.yaml
+++ b/recipes/bluesky/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "bluesky" %}
-{% set version = "v1.0.0" %}
+{% set version = "1.0.0" %}
 {% set sha256 = "e68dbcb64f98997a193408d1510c70d0ee00dedf79c35dad703f35d773f02e11" %}
 
 package:
@@ -8,12 +8,11 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/NSLS-II/{{ name }}/archive/{{ version }}.tar.gz
+  url: https://github.com/NSLS-II/{{ name }}/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
   number: 0
-  skip: True  # [py2k]
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
