--- a/recipes/bluesky/meta.yaml
+++ b/recipes/bluesky/meta.yaml
@@ -17,11 +17,11 @@ build:
 
 requirements:
   build:
-    - python
+    - python >=3
     - setuptools
 
   run:
-    - python
+    - python >=3
     - cycler
     - event-model
     - historydict
