--- a/recipes/bluesky/meta.yaml
+++ b/recipes/bluesky/meta.yaml
@@ -13,15 +13,16 @@ source:
 
 build:
   number: 0
+  skip: True  # [py2k]
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
   build:
-    - python >=3
+    - python
     - setuptools
 
   run:
-    - python >=3
+    - python
     - cycler
     - event-model
     - historydict
