--- a/recipes/pyunlocbox/meta.yaml
+++ b/recipes/pyunlocbox/meta.yaml
@@ -28,6 +28,10 @@ requirements:
 test:
   imports:
     - pyunlocbox
+  requires:
+    - matplotlib
+  commands:
+    - python setup.py test
 
 about:
   home: https://github.com/epfl-lts2/pyunlocbox
