out-of-source testing

--- a/recipes/pyunlocbox/meta.yaml
+++ b/recipes/pyunlocbox/meta.yaml
@@ -31,7 +31,7 @@ test:
   requires:
     - matplotlib
   commands:
-    - python setup.py test
+    - python -m unittest pyunlocbox.tests.test_all.suite
 
 about:
   home: https://github.com/epfl-lts2/pyunlocbox
