Install from tarball instead of wheel.

--- a/recipes/sdf/meta.yaml
+++ b/recipes/sdf/meta.yaml
@@ -7,7 +7,7 @@ package:
 
 build:
   number: 0
-  script: python -m pip install --no-deps sdf=={{ version }}
+  script: python -m pip install --no-deps https://github.com/ScientificDataFormat/SDF-Python/archive/v{{ version }}.tar.gz
 
 requirements:
   build:
