--- a/recipes/pyunlocbox/meta.yaml
+++ b/recipes/pyunlocbox/meta.yaml
@@ -7,9 +7,8 @@ package:
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  git_url: https://github.com/epfl-lts2/pyunlocbox.git
+  git_tag: conda-forge
 
 build:
   noarch: python
