--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   number: {{ build_number }}
-  skip: True  # [win]
+  skip: True  # [not unix]
 
 requirements:
   build:
@@ -27,15 +27,13 @@ requirements:
 
 test:
   commands:
-    - ls -la $PREFIX/lib
-    - ls -la $PREFIX/include
-    - test -L $PREFIX/lib/libadept.so  # [unix]
+    - test -L $PREFIX/lib/libadept.so  # [linux]
     - test -L $PREFIX/lib/libadept.dylib  # [osx]
-    - test -f $PREFIX/lib/libadept.so.0.0.0  # [unix]
-    - test -f $PREFIX/lib/libadept.a  # [unix]
+    - test -f $PREFIX/lib/libadept.so.0.0.0  # [linux]
+    - test -f $PREFIX/lib/libadept.a  # [linux]
     - test -f $PREFIX/lib/libadept.la  # [osx]
-    - test -f $PREFIX/lib/libadept.0.dylib  # [oxs]
-    - test -f $PREFIX/include/adept.h  # [not win]
+    - test -f $PREFIX/lib/libadept.0.dylib  # [osx]
+    - test -f $PREFIX/include/adept.h  # [linux or osx]
 
 about:
   home: http://www.met.reading.ac.uk/clouds/adept/
