skipping py27 and py35 on mac for build time

--- a/recipes/rdkit/meta.yaml
+++ b/recipes/rdkit/meta.yaml
@@ -15,7 +15,7 @@ source:
 
 build:
   skip: true  # [win and py3k]
-  skip: true  # [osx and py27]
+  skip: true  # [osx and (py27 or py35)]
   number: 0
 
 requirements:
