--- a/recipes/torchvision/meta.yaml
+++ b/recipes/torchvision/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   number: 0
-  skip: True  # [win]
+  skip: True  # [not linux-64]
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
