conda-forge package name for PyOpenGL is lowercase

--- a/recipes/vaex-ui/meta.yaml
+++ b/recipes/vaex-ui/meta.yaml
@@ -23,7 +23,7 @@ requirements:
   run:
     - python
     - vaex-core >=0.1
-    - PyOpenGL
+    - pyopengl
     - scipy
     - pyqt
     - matplotlib
