--- a/recipes/pyunlocbox/meta.yaml
+++ b/recipes/pyunlocbox/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pyunlocbox" %}
-{% set version = "0.5.1" %}
-{% set sha256 = "50e6e900fe321e6335a6cf71854156075650068bd75980a33f1ae3b83215f5ca" %}
+{% set version = "0.5.2" %}
+{% set sha256 = "" %}
 
 package:
   name: {{ name|lower }}
@@ -8,7 +8,7 @@ package:
 
 source:
   git_url: https://github.com/epfl-lts2/pyunlocbox.git
-  git_tag: conda-forge
+  git_tag: master
 
 build:
   noarch: python
@@ -34,7 +34,8 @@ about:
   home: https://github.com/epfl-lts2/pyunlocbox
   license: BSD-3-Clause
   license_family: BSD
-  summary: 'A Python convex optimization package using proximal splitting methods'
+  license_file: LICENSE.txt
+  summary: 'Convex Optimization in Python using Proximal Splitting'
   doc_url: https://pyunlocbox.readthedocs.io/
   dev_url: https://github.com/epfl-lts2/pyunlocbox
 
