pyflann needed to test NNgraphs

--- a/recipes/pygsp/meta.yaml
+++ b/recipes/pygsp/meta.yaml
@@ -30,8 +30,9 @@ test:
   requires:
     - matplotlib
     - scikit-image
+    - pyflann  # [not win]
   commands:
-    - python -m unittest pygsp.tests.test_graphs.suite
+    - python -m unittest pygsp.tests.test_graphs.suite  # [not win]
     - python -m unittest pygsp.tests.test_filters.suite
     - python -m unittest pygsp.tests.test_utils.suite
 
