--- a/recipes/sdf/meta.yaml
+++ b/recipes/sdf/meta.yaml
@@ -1,18 +1,23 @@
 {% set name = "sdf" %}
 {% set version = "0.3.3" %}
+{% set sha256 = "c1c7dfe08d0294dfa179c50f8f6b8a04d1a0195c3b50bf259a73dac37da75a40" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
+source:
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/SDF-{{ version }}.tar.gz  
+  sha256: {{ sha256 }}
+
 build:
   number: 0
-  script: python -m pip install --no-deps https://github.com/ScientificDataFormat/SDF-Python/archive/v{{ version }}.tar.gz
+  script: python setup.py install --single-version-externally-managed --record record.txt 
 
 requirements:
   build:
     - python
-    - pip
+    - setuptools
   run:
     - python
     - h5py
