--- a/recipes/robotframework/meta.yaml
+++ b/recipes/robotframework/meta.yaml
@@ -9,7 +9,7 @@ package:
 source:
   fn: robotframework-3.0.2.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  md5: {{ sha256 }}
+  sha256: {{ sha256 }}
 
 build:
   number: 0
@@ -46,7 +46,7 @@ test:
 
 about:
   home: http://robotframework.org
-  license: Apache License 2.0
+  license: Apache-2.0
   summary: 'A generic test automation framework'
 
 extra:
