use latest release

--- a/recipes/pyunlocbox/meta.yaml
+++ b/recipes/pyunlocbox/meta.yaml
@@ -1,14 +1,15 @@
 {% set name = "pyunlocbox" %}
 {% set version = "0.5.2" %}
-{% set sha256 = "" %}
+{% set sha256 = "1b5da78030fde06961acfac1ad2652daed473f5c7cc2c0d9b7845660ef46b4af" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  git_url: https://github.com/epfl-lts2/pyunlocbox.git
-  git_tag: master
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
 build:
   noarch: python
