use latest release

--- a/recipes/pygsp/meta.yaml
+++ b/recipes/pygsp/meta.yaml
@@ -1,14 +1,15 @@
 {% set name = "PyGSP" %}
 {% set version = "0.5.1" %}
-{% set sha256 = "" %}
+{% set sha256 = "4874ad88793d622d4f578b40c6617a99b1f02bc6c6c4077f0e48cd71c7275800" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  git_url: https://github.com/epfl-lts2/pygsp.git
-  git_tag: master
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
 build:
   noarch: python
