Pin openmp to 4.0.x

--- a/recipes/lightfm/meta.yaml
+++ b/recipes/lightfm/meta.yaml
@@ -21,7 +21,7 @@ requirements:
     - setuptools
     - toolchain
     - cython
-    - openmp  # [linux]
+    - openmp 4.0.* # [linux]
     # Pin numpy at build time with the minimum version available.
     - numpy 1.10.*  # [not win]
     - numpy 1.11.*  # [win]
@@ -29,7 +29,7 @@ requirements:
     - requests
   run:
     - python
-    - openmp  # [linux]
+    - openmp 4.0.* # [linux]
     - numpy >=1.10  # [not win]
     - numpy >=1.11  # [win]
     - scipy >=0.17
