mdsplus: Be specific about python version
[skip appveyor]

--- a/recipes/mdsplus/meta.yaml
+++ b/recipes/mdsplus/meta.yaml
@@ -19,6 +19,7 @@ source:
 build:
   number: 0
   skip: True  # [win]
+  skip: True  # [py3k]
 
 requirements:
   build:
@@ -34,7 +35,6 @@ requirements:
     - xorg-libxt
     - openmotif
     - openmotif-dev
-    - python
     - toolchain
     - perl
     - setuptools
@@ -50,7 +50,7 @@ requirements:
     - xorg-libxt
     - openmotif
     - openmotif-dev
-    - python
+    - python 2.*
     - numpy
 
 test:
