mdsplus: Combine win or py3k for skipping build
[skip appveyor]

--- a/recipes/mdsplus/meta.yaml
+++ b/recipes/mdsplus/meta.yaml
@@ -18,8 +18,7 @@ source:
     - mdsdcl_Makefile.in.patch
 build:
   number: 0
-  skip: True  # [win]
-  skip: True  # [py3k]
+  skip: True  # [win or py3k]
 
 requirements:
   build:
