--- a/recipes/rdkit/meta.yaml
+++ b/recipes/rdkit/meta.yaml
@@ -22,18 +22,19 @@ requirements:
     - toolchain
     - cmake
     - requests
-    - boost <=1.64
+    - boost 1.65.1
     - python
     - numpy 1.11.*
     - pillow
-    - freetype
+    - freetype 2.8.1
     - eigen
     - pandas
-    - cairo
+    - cairo 1.14.*
+    - jom  # [win]
     - pkg-config  # [not win]
   run:
-    - cairo
-    - boost <=1.64
+    - cairo 1.14.*
+    - boost 1.65.1
     - python
     - six
     - numpy >=1.11
@@ -57,7 +58,8 @@ test:
 
 about:
   home: http://rdkit.org
-  license: BSD
+  license: BSD 3-Clause
+  license_file: license.txt
   summary: 'RDKit is a collection of cheminformatics and machine-learning software written in C++ and Python.'
 
 extra:
