removing windows py3k

--- a/recipes/rdkit/meta.yaml
+++ b/recipes/rdkit/meta.yaml
@@ -14,6 +14,7 @@ source:
     - rdconfig.patch  # [win]
 
 build:
+  skip: true  # [win and py3k]
   skip: true  # [osx and (py27 or py35)]
   number: 0
 
