pygraphviz: skip win for now

--- a/recipes/pygraphviz/meta.yaml
+++ b/recipes/pygraphviz/meta.yaml
@@ -12,6 +12,9 @@ source:
 
 build:
   number: 0
+  # It is possible to add windows support, but the
+  # graphviz win package is not ready for it yet
+  skip: True  # [win]
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
