--- a/recipes/ppci/meta.yaml
+++ b/recipes/ppci/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  noarch: python
+  skip: True # [py2k]
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
@@ -22,16 +22,25 @@ requirements:
     - setuptools
   run:
     - python
+    - colorama
 
 test:
   imports:
     - ppci
-  commands:
-    - ppci-build.py -h
+    - ppci.arch
+    - ppci.binutils
+    - ppci.build
+    - ppci.cli
+    - ppci.codegen
+    - ppci.lang
+    - ppci.opt
+    - ppci.programs
+    - ppci.utils
 
 about:
   home: http://ppci.readthedocs.io/
   license: BSD-2-Clause
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
   summary: 'A compiler for ARM, X86, MSP430, xtensa and more implemented in pure Python'
   doc_url: http://ppci.readthedocs.io/
   dev_url: https://bitbucket.org/windel/ppci
