--- a/recipes/python-irodsclient/meta.yaml
+++ b/recipes/python-irodsclient/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "python-irodsclient" %}
-{% set version = "0.6.0" %}
-{% set sha256 = "ca4fb5c390744420d2265043796a8fbb5f9ca1e3ac2c19e13e3072fc52161daf" %}
+{% set version = "0.7.0" %}
+{% set sha256 = "81dd6718722c357b37dfd197f6d7b51f40adc52048dd2adfc9b53846c1f1a39c" %}
 
 package:
   name: {{ name|lower }}
@@ -21,6 +21,7 @@ requirements:
     - setuptools
     - prettytable
     - six
+    - xmlrunner
   run:
     - python
 
