--- a/recipes/mdbenchmark/meta.yaml
+++ b/recipes/mdbenchmark/meta.yaml
@@ -14,7 +14,7 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
-  skip: true  # [win and osx and (py36 or py35)]
+  skip: true  # [win or py3k or osx]
   entry_points:
     - mdbenchmark = mdbenchmark.cli:cli
 
