pygraphviz: add pkg-config as a build dep

--- a/recipes/pygraphviz/meta.yaml
+++ b/recipes/pygraphviz/meta.yaml
@@ -23,6 +23,7 @@ requirements:
     - python
     - setuptools
     - graphviz 2.38.*
+    - pkg-config
   run:
     - python
     - graphviz 2.38.*
