pygraphviz: inspect linkages, objects

--- a/recipes/pygraphviz/meta.yaml
+++ b/recipes/pygraphviz/meta.yaml
@@ -36,6 +36,8 @@ test:
     - pygraphviz/tests
   commands:
     - nosetests --verbosity=3 pygraphviz/tests
+    - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
+    - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
   requires:
     - mock >=1.3
     - nose >=0.10.1
