added test to conda build recipe

--- a/recipes/timml/meta.yaml
+++ b/recipes/timml/meta.yaml
@@ -1,15 +1,16 @@
 {% set name = "timml" %}
 {% set version = "5.0.0" %}
-{% set sha256 = "8b9f66278c815571f097ac4fdd33cffdaefd17dcc480b3c53aa8df2c2b7cf167" %}
+#{% set sha256 = "8b9f66278c815571f097ac4fdd33cffdaefd17dcc480b3c53aa8df2c2b7cf167" %}
 
 package:
    name: {{ name|lower }}
    version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/mbakker7/timml/archive/5.0.0.tar.gz
-  sha256: {{ sha256 }}
+        #fn: {{ name }}-{{ version }}.tar.gz
+        #url: https://github.com/mbakker7/timml/archive/5.0.0.tar.gz
+        #sha256: {{ sha256 }}
+        git_url: https://github.com/jentjr/timml
 
 build:
   number: 0
@@ -21,9 +22,9 @@ requirements:
     - toolchain
     - mingw # [win and py>=35]
     - python 
-    - scipy
     - numpy  
-    - matplotlib 
+    - scipy
+    - matplotlib
     - vc 14 # [win and py>=35]
 
   run:
@@ -33,10 +34,6 @@ requirements:
    - {{ pin_compatible('matplotlib', min_pin='2.0') }} 
    - vc 14 # [win and py>=35]
    
-test:
-  imports:
-  - timml
-  
 about:
   home: https://github.com/mbakker7/timml
   license: MIT
