--- a/recipes/robotframework/meta.yaml
+++ b/recipes/robotframework/meta.yaml
@@ -13,6 +13,7 @@ source:
 
 build:
   number: 0
+  noarch: python
   script: python setup.py install  --single-version-externally-managed --record record.txt
 
 requirements:
@@ -47,8 +48,12 @@ test:
 about:
   home: http://robotframework.org
   license: Apache-2.0
+  license_file: LICENSE.txt
   summary: 'A generic test automation framework'
+  doc_url: http://robotframework.org/robotframework/{{ version }}/RobotFrameworkUserGuide.html
+  dev_url: https://github.com/robotframework/robotframework
 
 extra:
   recipe-maintainers:
     - windelbouwmanbosch
+    - windelbouwman
