Added the license file manually and made package noarch.

--- a/recipes/formencode/meta.yaml
+++ b/recipes/formencode/meta.yaml
@@ -13,16 +13,15 @@ source:
 
 build:
   number: 0
+  noarch: python
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
   build:
     - python
     - setuptools
-    - six
   run:
     - python
-    - six
 
 test:
   imports:
@@ -31,9 +30,11 @@ test:
 about:
   home: http://formencode.org
   license: MIT
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'  # Also see: https://github.com/formencode/formencode/issues/91
   summary: 'HTML form validation, generation, and conversion package'
   dev_url: https://github.com/formencode/formencode
 
 extra:
   recipe-maintainers:
    - windelbouwmanbosch
+   - windelbouwman
