Removed unneccessary wording

--- a/recipes/r-rsvg/meta.yaml
+++ b/recipes/r-rsvg/meta.yaml
@@ -39,7 +39,7 @@ test:
 
 about:
   home: https://github.com/jeroen/rsvg#readme
-  license: MIT + file LICENSE
+  license: MIT
   summary: Renders vector-based svg images into high-quality custom-size bitmap arrays using
     'librsvg2'. The resulting bitmap can be written to e.g. png, jpeg or webp format.
     In addition, the package can convert images directly to various formats such as
