Moved run dependencies

--- a/recipes/r-rsvg/meta.yaml
+++ b/recipes/r-rsvg/meta.yaml
@@ -29,8 +29,9 @@ requirements:
     - librsvg              # [not win]
 
   run:
-    - r-base{indent}libgcc  # [not win]
-    - librsvg               # [not win]
+    - r-base
+    - libgcc  # [not win]
+    - librsvg  # [not win]
 
 test:
   commands:
