Added license file

--- a/recipes/r-rsvg/meta.yaml
+++ b/recipes/r-rsvg/meta.yaml
@@ -46,6 +46,7 @@ about:
     In addition, the package can convert images directly to various formats such as
     pdf or postscript.
   license_family: MIT
+  license_file: LICENSE
 
 extra:
   recipe-maintainers:
