--- a/recipes/xmlrunner/meta.yaml
+++ b/recipes/xmlrunner/meta.yaml
@@ -31,7 +31,9 @@ about:
   license: LGPL
   summary: 'PyUnit-based test runner with JUnit like XML reporting.'
   description: |
-    PyUnit-based test runner with JUnit like XML reporting.
+    unittest-xml-reporting is a unittest test runner that can save test results
+    to XML files that can be consumed by a wide range of tools, such as build
+    systems, IDEs and continuous integration servers.
   doc_url: https://github.com/pycontribs/xmlrunner 
   dev_url: https://github.com/pycontribs/xmlrunner
 
