added license file

--- a/recipes/xmlrunner/meta.yaml
+++ b/recipes/xmlrunner/meta.yaml
@@ -29,7 +29,10 @@ test:
 
 about:
   home: https://github.com/pycontribs/xmlrunner
-  license: LGPL
+  license: LGPL-3.0
+  # LICENSE possibily can be omitted in the next release
+  # https://github.com/pycontribs/xmlrunner/blob/master/MANIFEST.in#L2
+  license_file: LICENSE
   summary: 'PyUnit-based test runner with JUnit like XML reporting.'
   description: |
     unittest-xml-reporting is a unittest test runner that can save test results
