--- a/recipes/xmlrunner/meta.yaml
+++ b/recipes/xmlrunner/meta.yaml
@@ -32,7 +32,7 @@ about:
   license: LGPL-3.0
   # LICENSE possibily can be omitted in the next release
   # https://github.com/pycontribs/xmlrunner/blob/master/MANIFEST.in#L2
-  license_file: LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'PyUnit-based test runner with JUnit like XML reporting.'
   description: |
     unittest-xml-reporting is a unittest test runner that can save test results
