reindent: Address comments from reviews
- No version in homepage
- Add test for running from command line
- Skip python3 build
- Revise sha256 jinjia variables

--- a/recipes/reindent/meta.yaml
+++ b/recipes/reindent/meta.yaml
@@ -1,8 +1,7 @@
 {% set name = "Reindent" %}
 {% set version = "0.1.1" %}
 {% set file_ext = "tar.gz" %}
-{% set hash_type = "sha256" %}
-{% set hash_value = "d61226a0d0109aef3495033b42e8a0258c6bef1c014d9f26e31c62f071352b82" %}
+{% set sha256 = "d61226a0d0109aef3495033b42e8a0258c6bef1c014d9f26e31c62f071352b82" %}
 
 package:
   name: '{{ name|lower }}'
@@ -11,11 +10,14 @@ package:
 source:
   fn: '{{ name }}-{{ version }}.{{ file_ext }}'
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ file_ext }}
-  '{{ hash_type }}': '{{ hash_value }}'
+  sha256: '{{ sha256 }}'
 
 build:
   number: 0
-  script: 'python setup.py install '
+  script: python setup.py install
+  entry_points:
+    - reindent = reindent:main
+  skip: True  # [py3k]
 
 requirements:
   build:
@@ -26,9 +28,11 @@ requirements:
 test:
   imports:
     - reindent
+  commands:
+    - echo "pass" | reindent > /dev/null
 
 about:
-  home: https://pypi.python.org/pypi/Reindent/0.1.0
+  home: https://pypi.python.org/pypi/Reindent
   license: Public Domain
   license_family: PUBLIC-DOMAIN
   license_file: 'README.txt'
