Adding toolchain, and dev/doc urls.

--- a/recipes/pyahocorasick/meta.yaml
+++ b/recipes/pyahocorasick/meta.yaml
@@ -19,6 +19,7 @@ requirements:
   build:
     - python
     - setuptools
+    - toolchain
   run:
     - python
 
@@ -37,6 +38,8 @@ about:
       search meaning that you can find multiple key strings occurrences at once in some input text. 
       The library provides an ahocorasick Python module that you can use as a plain dict-like Trie or 
       convert a Trie to an automaton for efficient Aho-Corasick search.
+  dev_url: https://github.com/WojciechMula/pyahocorasick
+  doc_url: http://pyahocorasick.readthedocs.io/en/latest/
 
 extra:
   recipe-maintainers:
