reindent: Remove output to /dev/null because windows doesn't have it

--- a/recipes/reindent/meta.yaml
+++ b/recipes/reindent/meta.yaml
@@ -29,7 +29,7 @@ test:
   imports:
     - reindent
   commands:
-    - echo "pass" | reindent > /dev/null
+    - echo "pass" | reindent
 
 about:
   home: https://pypi.python.org/pypi/Reindent
