Reformatted recipe with conda_r_skeleton_helper

--- a/recipes/r-rsvg/meta.yaml
+++ b/recipes/r-rsvg/meta.yaml
@@ -17,6 +17,7 @@ source:
 build:
   number: 0
   skip: true  # [win32]
+
   rpaths:
     - lib/R/lib/
     - lib/
@@ -31,7 +32,7 @@ requirements:
 
   run:
     - r-base
-    - libgcc  # [not win]
+    - libgcc   # [not win]
     - librsvg  # [not win]
 
 test:
@@ -47,8 +48,11 @@ about:
     In addition, the package can convert images directly to various formats such as
     pdf or postscript.
   license_family: MIT
-  license_file: LICENSE
 
 extra:
   recipe-maintainers:
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
     - jenzopr
