--- a/recipes/r-mpm/meta.yaml
+++ b/recipes/r-mpm/meta.yaml
@@ -55,3 +55,7 @@ extra:
     - MathiasHaudgaard
     - FrodePedersen
     - ArneKr
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
