have to manually package license file [skip appveyor]

--- a/recipes/pytest-tornado/meta.yaml
+++ b/recipes/pytest-tornado/meta.yaml
@@ -33,7 +33,7 @@ about:
   home: https://github.com/eugeniy/pytest-tornado
   license: Apache 2.0
   license_family: Apache
-  license_file: LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: |
     A py.test plugin providing fixtures and markers to simplify testing of
     asynchronous tornado applications.
