--- a/recipes/binarytree/meta.yaml
+++ b/recipes/binarytree/meta.yaml
@@ -26,6 +26,7 @@ requirements:
 test:
   imports:
     - binarytree
+    - binarytree.exceptions
 
 about:
   home: http://github.com/joowani/binarytree
