Disable Windows build due r-fdrtool not compiling there.

--- a/recipes/r-sda/meta.yaml
+++ b/recipes/r-sda/meta.yaml
@@ -16,7 +16,8 @@ source:
 
 build:
   number: 0
-  skip: true  # [win32]
+  # r-fdrtool fails to compile on Windows
+  skip: true  # [win]
   rpaths:
     - lib/R/lib/
     - lib/
