removed run dependencies, added version dependencies

--- a/recipes/python-irodsclient/meta.yaml
+++ b/recipes/python-irodsclient/meta.yaml
@@ -20,14 +20,11 @@ requirements:
   build:
     - python
     - setuptools
-    - prettytable
-    - six
-    - xmlrunner
   run:
     - python
-    - prettytable
-    - six
-    - xmlrunner
+    - six >=1.10.0
+    - prettytable >=0.7.2
+    - xmlrunner >=1.7.7
 
 test:
   imports:
