various small nits

--- a/recipes/numdifftools/meta.yaml
+++ b/recipes/numdifftools/meta.yaml
@@ -17,36 +17,33 @@ build:
   noarch: python
   
 requirements:
-
   build:
-  
     - python
     - setuptools
     - numpy >=1.9
     - scipy >=0.8
     - algopy >=0.4
-    - pyscaffold <2.5
-    
+    - pyscaffold <2.5  # doesn't build with older versions
   run:
     - python
-    # This is needed because __init__ use pkg_resources
-    - setuptools
+    - setuptools  # the __init__ files use pkg_resources
     - numpy >=1.9
     - scipy >=0.8
     - algopy >=0.4
 
 test:
-
   imports:
     - numdifftools
     - numdifftools.tests
+  commands:
+    - $PYTHON -m numdifftools.tests.test_multicomplex
 
 about:
   home: "https://github.com/pbrod/numdifftools/"
-  license: BSD-3-Clause
   summary: Solves automatic numerical differentiation problems in one or more variables.
+  license: BSD-3-Clause
   license_family: BSD
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'  # https://github.com/pbrod/numdifftools/pull/35
   doc_url: http://numdifftools.readthedocs.io/en/latest/
   dev_url: https://github.com/pbrod/numdifftools/
 
