fix test command on windows

--- a/recipes/numdifftools/meta.yaml
+++ b/recipes/numdifftools/meta.yaml
@@ -33,7 +33,7 @@ test:
     - numdifftools
     - numdifftools.tests
   commands:
-    - $PYTHON -m numdifftools.tests.test_multicomplex
+    - python -m numdifftools.tests.test_multicomplex
 
 about:
   home: "https://github.com/pbrod/numdifftools/"
