Fix the summary.

--- a/recipes/r-pander/meta.yaml
+++ b/recipes/r-pander/meta.yaml
@@ -43,9 +43,12 @@ test:
 about:
   home: https://CRAN.R-project.org/package=pander
   license: AGPL-3
-  summary: Contains some functions catching all messages, 'stdout' and other useful information
-    while evaluating R code and other helpers to return user specified text elements
-    (like
+  summary: "Contains some functions catching all messages, 'stdout' and other useful information
+    while evaluating R code and other helpers to return user specified text elements (like: header,
+    paragraph, table, image, lists etc.) in 'pandoc' markdown or several type of R objects similarly
+    automatically transformed to markdown format. Also capable of exporting/converting (the resulting)
+    complex 'pandoc' documents to e.g. HTML, 'PDF', 'docx' or 'odt'. This latter reporting feature is
+    supported in brew syntax or with a custom reference class with a smarty caching 'backend'."
   license_family: AGPL
 
 extra:
