youtube-dl: add link for issue on license_file

--- a/recipes/youtube_dl/meta.yaml
+++ b/recipes/youtube_dl/meta.yaml
@@ -38,6 +38,8 @@ about:
   license: Public Domain
   license_family: OTHER
   license_url: http://unlicense.org
+  # https://github.com/rg3/youtube-dl/issues/15054
+  # license_file: ''
   summary: YouTube video downloader
   description: |
       Command-line program to download videos from YouTube.com and other video sites
