--- a/recipes/crcmod/meta.yaml
+++ b/recipes/crcmod/meta.yaml
@@ -29,7 +29,7 @@ test:
 
 about:
     home: http://crcmod.sourceforge.net
-    license: MIT License
+    license: MIT
     license_family: MIT
     license_file: LICENSE
     summary: CRC Generator
