--- a/recipes/r-lhs/meta.yaml
+++ b/recipes/r-lhs/meta.yaml
@@ -23,12 +23,12 @@ build:
 
 requirements:
   build:
-    - r-base
+    - r-base  >=3.4
     - posix                # [win]
     - {{native}}toolchain  # [win]
     - gcc                  # [not win]
   run:
-    - r-base
+    - r-base  >=3.4
     - libgcc  # [not win]
 
 test:
