backports.test.support: add backports as dep

--- a/recipes/backports.test.support/meta.yaml
+++ b/recipes/backports.test.support/meta.yaml
@@ -18,10 +18,12 @@ build:
 requirements:
   build:
     - python
+    - backports
     - setuptools
     - setuptools_scm
   run:
     - python
+    - backports
 
 test:
   source_files:
