--- a/recipes/backports.test.support/meta.yaml
+++ b/recipes/backports.test.support/meta.yaml
@@ -12,7 +12,6 @@ source:
 
 build:
   number: 0
-  noarch: python
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
@@ -24,6 +23,8 @@ requirements:
   run:
     - python
     - backports
+    - future       # [py2k]
+    - backports.os # [py2k]
 
 test:
   source_files:
