backports.test.support: don't test import everything from backports.test.support

--- a/recipes/backports.test.support/meta.yaml
+++ b/recipes/backports.test.support/meta.yaml
@@ -32,9 +32,10 @@ test:
   imports:
     - backports
     - backports.test
-    - backports.test.support
   commands:
     - python -m unittest discover tests
+  requires:
+    - mock
 
 about:
   home: https://github.com/pjdelport/backports.test.support
