backports.test.support: add patch

--- a/recipes/backports.os/meta.yaml
+++ b/recipes/backports.os/meta.yaml
@@ -28,10 +28,13 @@ test:
     - tests
   imports:
     - backports
+    - backports.os
   requires:
     - hypothesis
-  commands:
-    - python -m unittest discover tests
+  # Unicode + py27 on Windows -> :'(
+  commands:                              # [unix]
+    - export "PYTHONIOENCODING=utf8"     # [unix]
+    - python -m unittest discover tests  # [unix]
 
 about:
   home: https://github.com/pjdelport/backports.os
