--- a/recipes/backports.test.support/meta.yaml
+++ b/recipes/backports.test.support/meta.yaml
@@ -9,6 +9,8 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: "7d206fb2a279021502b64ae82f454513d2b872041d36a5b5a1a04d288e25d9c9"
+  patches:
+    - PR_4.patch
 
 build:
   number: 0
@@ -32,7 +34,10 @@ test:
   imports:
     - backports
     - backports.test
+    - backports.test.support
   commands:
+    - set "PYTHONIOENCODING=utf8"     # [win]
+    - export "PYTHONIOENCODING=utf8"  # [unix]
     - python -m unittest discover tests
   requires:
     - mock
