add some TODOS for later

--- a/recipes/skrebate/meta.yaml
+++ b/recipes/skrebate/meta.yaml
@@ -33,7 +33,8 @@ about:
   home: https://epistasislab.github.io/scikit-rebate
   license: MIT
   license_family: MIT
-  license_file: LICENSE
+  # TODO: upstream a PR to add LICENSE to MANIFEST.in
+  # license_file: LICENSE
   summary: |
     A scikit-learn-compatible Python implementation of ReBATE, a suite of
     Relief-based feature selection algorithms for Machine Learning.
