--- a/recipes/scikit-garden/meta.yaml
+++ b/recipes/scikit-garden/meta.yaml
@@ -1,21 +1,21 @@
 {% set name = "scikit-garden" %}
 {% set version = "0.1.3" %}
-{% set bundle = "tar.gz" %}
-{% set hash_type = "sha256" %}
-{% set hash = "d6fe65205f39633f17c181f552a0fc56e2f05bb2096be63f38c160fe20718d9d" %}
-{% set build = 0 %}
+{% set sha256 = "d6fe65205f39633f17c181f552a0fc56e2f05bb2096be63f38c160fe20718d9d" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.{{ bundle }}
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ bundle }}
-  {{ hash_type }}: {{ hash }}
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: {{ sha256 }}
+  # Until scikit-garden releases the current version, this patch is required to build.
+  patches:
+    - dev.patch
 
 build:
-  number: {{ build }}
+  number: 0
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
@@ -44,7 +44,8 @@ test:
 
 about:
   home: https://scikit-garden.github.io/
-  license_file: {{ RECIPE_DIR }}/LICENSE.txt
+  # license file should be included in the new version.
+  license_file: LICENSE.txt
   license: BSD 3-Clause
   license_family: BSD
   summary: 'A garden for scikit-learn compatible trees'
@@ -54,3 +55,4 @@ about:
 extra:
   recipe-maintainers:
     - pmlandwehr
+    - ukaratay
