noarch: python, :heart: more maintainers

--- a/recipes/skrebate/meta.yaml
+++ b/recipes/skrebate/meta.yaml
@@ -13,6 +13,7 @@ source:
 
 build:
   number: 0
+  noarch: python
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -49,3 +50,8 @@ about:
 extra:
   recipe-maintainers:
     - bollwyvl
+    - bryketos
+    - EpistasisLab
+    - pschmitt52
+    - rhiever
+    - weixuanfu
