--- a/recipes/scikit-mdr/meta.yaml
+++ b/recipes/scikit-mdr/meta.yaml
@@ -13,6 +13,7 @@ source:
 
 build:
   number: 0
+  noarch: python
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -53,3 +54,8 @@ about:
 extra:
   recipe-maintainers:
     - bollwyvl
+    - bryketos
+    - EpistasisLab
+    - pschmitt52
+    - rhiever
+    - weixuanfu
