Implemeting @synapticarbors comments

--- a/recipes/speclite/meta.yaml
+++ b/recipes/speclite/meta.yaml
@@ -18,12 +18,12 @@ build:
 requirements:
 
   build:
-    - python x.x
+    - python
     - setuptools
     - astropy
 
   run:
-    - python x.x
+    - python
     - numpy
     - scipy
     - astropy
@@ -51,6 +51,7 @@ about:
   summary: 'This package provides a set of lightweight utilities for working with spectroscopic data in astronomy. Based on the astropy affiliated package template.'
   license_file: licenses/LICENSE.rst
   dev_url: https://github.com/dkirkby/speclite
+  doc_url: http://speclite.readthedocs.io/en/latest/overview.html
   
 extra:
   recipe-maintainers:
