Added test stuff

--- a/recipes/impactutils/meta.yaml
+++ b/recipes/impactutils/meta.yaml
@@ -32,6 +32,18 @@ requirements:
     - seaborn >= 0.6.0
     - shapely >= 1.5.11
 
+test:
+
+  imports:
+    - impactutils
+
+  commands:
+    - cd ${PREFIX}/lib/python*/site-packages/impactutils/tests ; py.test -vv
+
+  requires:
+    - pytest
+    - pytest-cov
+
 about:
   home: https://github.com/usgs/earthquake-impact-utils
   license: Public Domain
