--- a/recipes/impactutils/meta.yaml
+++ b/recipes/impactutils/meta.yaml
@@ -18,19 +18,19 @@ requirements:
     - python
     - pip
   run:
-    - python >= 3.4
+    - python >=3.4
     - beautifulsoup4 >=4.4.0
-    - cartopy >= 0.14.0
-    - fiona >= 1.6.0
+    - cartopy >=0.14.0
+    - fiona >=1.6.0
     - h5py >=2.2
-    - matplotlib < 2.0
-    - numpy >= 1.0
-    - jupyter >= 
-    - pandas >= 0.8.1
-    - paramiko >= 1.15.2
-    - pycrypto >= 2.6.1
-    - seaborn >= 0.6.0
-    - shapely >= 1.5.11
+    - matplotlib <2.0
+    - numpy >=1.0
+    - jupyter
+    - pandas >=0.8.1
+    - paramiko >=1.15.2
+    - pycrypto >=2.6.1
+    - seaborn >=0.6.0
+    - shapely >=1.5.11
 
 test:
 
